@@ -8792,6 +8792,9 @@ of~\kbd{x}; consider all $x[i]$ as \kbd{ulong}s.
 \fun{long}{zv_sum}{GEN x} returns the sum of all the components
 of~\kbd{x} (assumes no overflow occurs).
 
+\fun{long}{zv_sumpart}{GEN v, long n} returns the sum $v[1] + \dots + v[n]$
+(assumes no overflow occurs and \kbd{lg}$(v) > n$).
+
 \fun{int}{zv_cmp0}{GEN x} returns 1 if all entries of the \kbd{zv} $x$ are $0$,
 and $0$ otherwise.
 
